--- a/carlos-pdf/src/styles/globals.css
+++ b/carlos-pdf/src/styles/globals.css
@@ -19,3 +19,10 @@
     --background-end-rgb: 0, 0, 0;
   }
 }
+.swiper-pagination{
+  position: relative!important;
+  bottom:  0 !important;
+}
+.swiper-pagination-bullet-active {
+  background-color: #000!important;
+}
